--- a/src/main/resources/archetype-resources/src/main/resources/application.properties
+++ b/src/main/resources/archetype-resources/src/main/resources/application.properties
@@ -6,7 +6,15 @@ db.default.password=
 
 # Hibernate properties
 hibernate.dialect=org.hibernate.dialect.H2Dialect
-hibernate.default_schema=
+hibernate.default_schema=PUBLIC
 hibernate.show_sql=true
+hibernate.format_sql=false
 hibernate.generate_statistics=false
+# Possible values: validate | update | create | create-drop
+#  - validate: validate the schema, makes no changes to the database
+#  - update: update the schema
+#  - create: creates the schema, destroying previous data
+#  - create-drop: drop the schema at the end of the session
+hibernate.hbm2ddl.auto=create
 hibernate.current_session_context_class=org.springframework.orm.hibernate4.SpringSessionContext
+#hibernate.jdbc.batch_size=
